[project]
name = "prospect-capital-application"
version = "0.1.0"
description = "Streamlit application for showing SEC NPORT-P filings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.1",
    "matplotlib>=3.10.1",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "SIM"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
